[package]
name = "pallet-arber"
version = "0.1.0"
authors = ["Andreas Doerr"]
edition = "2018"
description = "FRAME Merkle Mountain Range pallet."

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }

frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
]