[package]
name = "pallet-arber"
version = "0.1.0"
authors = ["Andreas Doerr"]
edition = "2018"
description = "FRAME Merkle Mountain Range pallet."

[lib]
doctest = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.3", default-features = false }
scale-info = { version = "2.8.0", default-features = false, features = ["derive"] }

sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }

frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }

arber = { git = "https://github.com/adoerr/arber.git", default-features = false, branch = "main" }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "arber/std",
    "codec/std",
    "scale-info/std",
    "sp-io/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-tracing/std",
    "frame-support/std",
    "frame-system/std",
]