[package]
name = "emptor"
version = "0.0.1"
authors = ["Andreas Doerr"]
edition = "2018"

[dependencies]
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-database = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["test-helpers"] }
sc-state-db = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

log = { version = "0.4" }

[dev-dependencies]
env_logger = { version = "0.8" }