[package]
name = "falso"
version = "0.0.1"
authors = ["Andreas Doerr"]
edition = "2018"

[dependencies]
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

substrate-test-client = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-test-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

async-std = { version = "1.9" }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
futures-core = { version = "0.3" }
libp2p = { version = "0.38", default-features = false }
log = { version = "0.4" }
parking_lot = { version = "0.11" }
rand = { version = "0.8" }

[dev-dependencies]
env_logger = { version = "0.8" }