[package]
name = "falso"
version = "0.0.1"
authors = ["Andreas Doerr"]
edition = "2018"

[lib]
doctest = false

[dependencies]
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-database = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

sc-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

substrate-test-client = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-test-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

emptor = { path = "../emptor" }

async-trait = { version = "0.1" }
futures = { version = "0.3" }
futures-core = { version = "0.3" }
parking_lot = { version = "0.11" }
rand = { version = "0.8" }
tokio = { version = "1.9", features = ["full"] }
tracing = { version = "0.1" }

[dev-dependencies]
sp-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
