[package]
name = "motor-runtime"
version = "0.0.1"
authors = ["adoerr"]
edition = "2018"
license = "Unlicense"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

frame-executive = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
frame-support = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
frame-system = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }

sp-api = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
sp-block-builder = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
sp-core = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
sp-inherents = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
sp-offchain = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
sp-session = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
sp-std = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
sp-transaction-pool = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
sp-version = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }

pallet-balances = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
pallet-sudo = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
pallet-transaction-payment = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/adoerr/substrate.git", branch = "master", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/adoerr/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std", 
    "pallet-balances/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
]