[package]
name = "simplex"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
derive_more = "0.99"
futures = "0.3"
log = "0.4"

codec = { package = "parity-scale-codec", version = "1.3.6", features = ["derive"] }

sp-api = { git = "https://github.com/adoerr/substrate.git", branch = "master" }
sp-application-crypto = { git = "https://github.com/adoerr/substrate.git", branch = "master" }
sp-consensus = { git = "https://github.com/adoerr/substrate.git", branch = "master" }
sp-core = { git = "https://github.com/adoerr/substrate.git", branch = "master" }
sp-runtime = { git = "https://github.com/adoerr/substrate.git", branch = "master" }

