[package]
name = "vegan"
version = "0.1.0"
authors = ["Andreas Doerr"]
edition = "2018"

[lib]
doctest = false

[dependencies]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "master" }

sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }

futures = "0.3.28"
tracing = "0.1.37"

emptor = { path = "../emptor" }
falso = { path = "../falso" }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
