[package]
name = "vegan-primitives"
version = "0.1.0"
edition = "2018"
authors = ["Andreas Doerr"]

[dependencies]
codec = { version = "2.2.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-application-crypto/std",
]
