[package]
name = "vegan-primitives"
version = "0.1.0"
edition = "2018"
authors = ["Andreas Doerr"]

[lib]
doctest = false

[dependencies]
codec = { version = "3.6.3", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

strum = { version = "0.25.0", default-features = false, features = ["derive"] }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-application-crypto/std",
    "sp-core/std",
]
